labs/lab6/error.txt
In file included from /home/admin228/os_labs/labs/lab6/gui/gui_linux.cpp:1:
/home/admin228/os_labs/labs/lab6/gui/gui_linux.h:23:33: error: ‘Widget’ has not been declared
   23 |     static void refreshCallback(Widget w, void *client_data, void *call_data);
      |                                 ^~~~~~
/home/admin228/os_labs/labs/lab6/gui/gui_linux.h:29:5: error: ‘Widget’ does not name a type
   29 |     Widget toplevel_ = nullptr;
      |     ^~~~~~
/home/admin228/os_labs/labs/lab6/gui/gui_linux.h:30:5: error: ‘Widget’ does not name a type
   30 |     Widget current_temp_value_ = nullptr;
      |     ^~~~~~
/home/admin228/os_labs/labs/lab6/gui/gui_linux.h:31:5: error: ‘Widget’ does not name a type
   31 |     Widget hourly_avg_value_ = nullptr;
      |     ^~~~~~
/home/admin228/os_labs/labs/lab6/gui/gui_linux.h:32:5: error: ‘Widget’ does not name a type
   32 |     Widget daily_avg_value_ = nullptr;
      |     ^~~~~~
/home/admin228/os_labs/labs/lab6/gui/gui_linux.h:33:5: error: ‘Widget’ does not name a type
   33 |     Widget refresh_button_ = nullptr;
      |     ^~~~~~
/home/admin228/os_labs/labs/lab6/gui/gui_linux.h:34:5: error: ‘Widget’ does not name a type
   34 |     Widget measurement_text_ = nullptr;
      |     ^~~~~~
/home/admin228/os_labs/labs/lab6/gui/gui_linux.h:36:5: error: ‘XtAppContext’ does not name a type
   36 |     XtAppContext app_context_ = nullptr;
      |     ^~~~~~~~~~~~
/home/admin228/os_labs/labs/lab6/gui/gui_linux.cpp: In member function ‘bool TemperatureGUILinux::initialize(int, char**)’:
/home/admin228/os_labs/labs/lab6/gui/gui_linux.cpp:25:5: error: ‘toplevel_’ was not declared in this scope
   25 |     toplevel_ = XtVaAppInitialize(
      |     ^~~~~~~~~
/home/admin228/os_labs/labs/lab6/gui/gui_linux.cpp:26:10: error: ‘app_context_’ was not declared in this scope
   26 |         &app_context_,
      |          ^~~~~~~~~~~~
/home/admin228/os_labs/labs/lab6/gui/gui_linux.cpp: In member function ‘int TemperatureGUILinux::run()’:
/home/admin228/os_labs/labs/lab6/gui/gui_linux.cpp:47:10: error: ‘toplevel_’ was not declared in this scope
   47 |     if (!toplevel_)
      |          ^~~~~~~~~
/home/admin228/os_labs/labs/lab6/gui/gui_linux.cpp:53:21: error: ‘toplevel_’ was not declared in this scope
   53 |     XtRealizeWidget(toplevel_);
      |                     ^~~~~~~~~
/home/admin228/os_labs/labs/lab6/gui/gui_linux.cpp:56:21: error: ‘app_context_’ was not declared in this scope
   56 |     XtAppAddTimeOut(app_context_, 2000, timerCallback, this);
      |                     ^~~~~~~~~~~~
/home/admin228/os_labs/labs/lab6/gui/gui_linux.cpp: In static member function ‘static void TemperatureGUILinux::timerCallback(void*, void*)’:
/home/admin228/os_labs/labs/lab6/gui/gui_linux.cpp:68:26: error: ‘class TemperatureGUILinux’ has no member named ‘app_context_’
   68 |     XtAppAddTimeOut(gui->app_context_, 2000, timerCallback, gui);
      |                          ^~~~~~~~~~~~
/home/admin228/os_labs/labs/lab6/gui/gui_linux.cpp: In member function ‘void TemperatureGUILinux::createControls()’:
/home/admin228/os_labs/labs/lab6/gui/gui_linux.cpp:74:68: error: ‘toplevel_’ was not declared in this scope
   74 |     Widget form = XtVaCreateManagedWidget("form", formWidgetClass, toplevel_,
      |                                                                    ^~~~~~~~~
/home/admin228/os_labs/labs/lab6/gui/gui_linux.cpp:93:5: error: ‘current_temp_value_’ was not declared in this scope; did you mean ‘current_temp_label’?
   93 |     current_temp_value_ = XtVaCreateManagedWidget("Loading...", labelWidgetClass, box,
      |     ^~~~~~~~~~~~~~~~~~~
      |     current_temp_label
/home/admin228/os_labs/labs/lab6/gui/gui_linux.cpp:104:5: error: ‘hourly_avg_value_’ was not declared in this scope; did you mean ‘hourly_avg_label’?
  104 |     hourly_avg_value_ = XtVaCreateManagedWidget("Loading...", labelWidgetClass, box,
      |     ^~~~~~~~~~~~~~~~~
      |     hourly_avg_label
/home/admin228/os_labs/labs/lab6/gui/gui_linux.cpp:115:5: error: ‘daily_avg_value_’ was not declared in this scope; did you mean ‘daily_avg_label’?
  115 |     daily_avg_value_ = XtVaCreateManagedWidget("Loading...", labelWidgetClass, box,
      |     ^~~~~~~~~~~~~~~~
      |     daily_avg_label
/home/admin228/os_labs/labs/lab6/gui/gui_linux.cpp:121:5: error: ‘refresh_button_’ was not declared in this scope
  121 |     refresh_button_ = XtVaCreateManagedWidget("Refresh", commandWidgetClass, box,
      |     ^~~~~~~~~~~~~~~
/home/admin228/os_labs/labs/lab6/gui/gui_linux.cpp:134:5: error: ‘measurement_text_’ was not declared in this scope; did you mean ‘measurements_label’?
  134 |     measurement_text_ = XtVaCreateManagedWidget("measurement_text", asciiTextWidgetClass, box,
      |     ^~~~~~~~~~~~~~~~~
      |     measurements_label
/home/admin228/os_labs/labs/lab6/gui/gui_linux.cpp: At global scope:
/home/admin228/os_labs/labs/lab6/gui/gui_linux.cpp:149:6: error: no declaration matches ‘void TemperatureGUILinux::refreshCallback(Widget, void*, void*)’
  149 | void TemperatureGUILinux::refreshCallback(Widget w, void *client_data, void *call_data)
      |      ^~~~~~~~~~~~~~~~~~~
/home/admin228/os_labs/labs/lab6/gui/gui_linux.h:23:17: note: candidate is: ‘static void TemperatureGUILinux::refreshCallback(int, void*, void*)’
   23 |     static void refreshCallback(Widget w, void *client_data, void *call_data);
      |                 ^~~~~~~~~~~~~~~
/home/admin228/os_labs/labs/lab6/gui/gui_linux.h:8:7: note: ‘class TemperatureGUILinux’ defined here
    8 | class TemperatureGUILinux
      |       ^~~~~~~~~~~~~~~~~~~
/home/admin228/os_labs/labs/lab6/gui/gui_linux.cpp: In member function ‘void TemperatureGUILinux::updateDisplay()’:
/home/admin228/os_labs/labs/lab6/gui/gui_linux.cpp:174:23: error: ‘toplevel_’ was not declared in this scope
  174 |     if (!monitor_ || !toplevel_)
      |                       ^~~~~~~~~
/home/admin228/os_labs/labs/lab6/gui/gui_linux.cpp:192:23: error: ‘current_temp_value_’ was not declared in this scope; did you mean ‘current_temp_str_’?
  192 |         XtVaSetValues(current_temp_value_, XtNlabel, current_temp_str_.c_str(), NULL);
      |                       ^~~~~~~~~~~~~~~~~~~
      |                       current_temp_str_
/home/admin228/os_labs/labs/lab6/gui/gui_linux.cpp:198:23: error: ‘hourly_avg_value_’ was not declared in this scope; did you mean ‘hourly_avg_str_’?
  198 |         XtVaSetValues(hourly_avg_value_, XtNlabel, hourly_avg_str_.c_str(), NULL);
      |                       ^~~~~~~~~~~~~~~~~
      |                       hourly_avg_str_
/home/admin228/os_labs/labs/lab6/gui/gui_linux.cpp:204:23: error: ‘daily_avg_value_’ was not declared in this scope; did you mean ‘daily_avg_str_’?
  204 |         XtVaSetValues(daily_avg_value_, XtNlabel, daily_avg_str_.c_str(), NULL);
      |                       ^~~~~~~~~~~~~~~~
      |                       daily_avg_str_
/home/admin228/os_labs/labs/lab6/gui/gui_linux.cpp:225:23: error: ‘measurement_text_’ was not declared in this scope
  225 |         XtVaSetValues(measurement_text_, XtNstring, text_str.c_str(), NULL);
      |                       ^~~~~~~~~~~~~~~~~
/home/admin228/os_labs/labs/lab6/gui/gui_linux.cpp:231:23: error: ‘measurement_text_’ was not declared in this scope
  231 |         XtVaSetValues(measurement_text_, XtNstring, error_msg.c_str(), NULL);
      |                       ^~~~~~~~~~~~~~~~~